--- a/css/main.css
+++ b/css/main.css
@@ -2419,37 +2419,47 @@ html.no-csstransitions .home-content__main {
   justify-content: auto;
   align-items: auto;
   height: 100vh;
-  overflow-y: auto;
+
+  overflow: auto;
+  padding: 50px; /* Adjust padding to prevent cutoff */
+
+  
 }
 
 .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 0 auto;
+  margin: 30 auto;
+  padding: auto;
 }
 
 
 /*# sourceMappingURL=main.css.map */
 #statistics {
-  background-color: rgba(255, 255, 255, 0.8); /* Adjust the alpha (last value) for transparency */
+  background-color: rgba(154, 175, 175, 0.929); /* Adjust the alpha (last value) for transparency */
   backdrop-filter: blur(10px); /* Add a blur effect to the background */
   padding: 50px; /* Adjust padding to prevent cutoff */
   margin: 0;
+  margin-top: 70px;
 }
 
 .statistics-container {
   display: flex;
+  flex-wrap: wrap-reverse;
   justify-content: space-around;
+  margin: 0 auto;
+  overflow-y: auto;
 }
 
 .statistic {
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.9); /* Adjust the alpha for transparency */
+  background-color: rgba(114, 176, 160, 0.9);
   border-radius: 8px;
   padding: 20px;
   margin: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease; /* Add a subtle box shadow */
 }
 
 /* Add any additional styles as needed */
@@ -2467,4 +2477,39 @@ html.no-csstransitions .home-content__main {
   .statistic {
       margin: 15px auto; /* Center the statistics horizontally */
   }
+}
+/* Add hover effect */
+.statistic:hover {
+  background-color: #bef4f1; /* Light teal color */
+}
+
+
+/* Mobile Styles */
+@media only screen and (max-width: 768px) {
+  /* Adjust font size or spacing for better readability on small screens */
+  h1 {
+      font-size: 10px;
+  }
+
+  /* Adjust padding or margins as needed */
+  .home-content__text {
+      padding: 5px;
+  }
+
+  /* Responsive styles for the card containers */
+  .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+  }
+
+  .card {
+      width: 100%; /* Make cards full width on small screens */
+      margin-bottom: 20px;
+  }
+}
+
+/* Tablet and Desktop Styles */
+@media only screen and (min-width: 769px) {
+  /* Add specific styles for larger screens if needed */
 }
